Update print statement from 'Multi-model' to 'Multi-modal'

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                             <div className="p-5 border-b border-slate-100 bg-slate-50/50">
                             <div className="flex items-center gap-2 mb-1">
                                 <Icons.Brain className="h-5 w-5 text-indigo-600" />
-                                <h3 className="font-bold text-slate-800 text-lg">Multi-model KR Prediction</h3>
+                                <h3 className="font-bold text-slate-800 text-lg">Multi-modal KR Prediction</h3>
                             </div>
                             <p className="text-sm text-slate-500">Precision prediction of kidney responsiveness (KR) to Urate-Lowering Agents.</p>
                             </div>
@@ -662,4 +662,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
