--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
                             <div className="p-5 border-b border-slate-100 bg-slate-50/50">
                             <div className="flex items-center gap-2 mb-1">
                                 <Icons.Brain className="h-5 w-5 text-indigo-600" />
-                                <h3 className="font-bold text-slate-800 text-lg">Multi-Modal KR Prediction</h3>
+                                <h3 className="font-bold text-slate-800 text-lg">Multi-Modal CKD Regression Prediction</h3>
                             </div>
-                            <p className="text-sm text-slate-500">Precision prediction of kidney responsiveness (KR) to Urate-Lowering Agents.</p>
+                            <p className="text-sm text-slate-500">Precision prediction of CKD Regression to Urate-Lowering Agents.</p>
                             </div>
 
                             {/* Drug Selection Tabs */}
@@ -664,4 +664,5 @@
 </body>
 
 </html>
+
 
